--- a/Pages/Code_Stylesheets/Spectrum_Analyzer.css
+++ b/Pages/Code_Stylesheets/Spectrum_Analyzer.css
@@ -26,7 +26,7 @@
   --Spacing: 0.5em;
   display: grid;
   grid-template-rows: 8fr 1fr;
-  grid-template-columns: repeat(7,1fr);
+  grid-template-columns: repeat(6,1fr) 1.5fr;
   --Border_Margin: 0.3rem;
   height: calc(100% - 2*var(--Border_Margin));
   width: calc(100% - 2*var(--Border_Margin));
@@ -56,31 +56,76 @@
 }
 
 .Bars_7{
-  background-color: rgba();
+  background-color: rgba(255,70,70,1);
 }
 .Bars_6{
-  background-color: rgba();
+  background-color: rgba(255,90,30,1);
 }
 .Bars_5{
-  background-color: rgba();
+  background-color: rgba(0,180,50,1);
 }
 .Bars_4{
   background-color: rgba();
 }
 .Bars_3{
-  background-color: rgba();
+  background-color: rgba(170,210,70,1);
 }
 .Bars_2{
-  background-color: rgba();
+  background-color: rgba(170,210,70,1);
 }
 .Bars_1{
-  background-color: rgba();
+  background-color: rgba(0,220,50,1);
 }
 
+#Controls_Container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 0.5fr 0.5fr repeat(6,1fr);
+}
 
+.Power_LEDs{
+  --Diameter: 1rem;
+  grid-row: 1 / span 2;
+  height: var(--Diameter);
+  width: var(--Diameter);
+  background-color: grey;
+  border-radius: 100%;
+}
 
+.Control_Knobs{
+  --Diameter: 1.5rem;
+  height: var(--Diameter);
+  width: var(--Diameter);
+  background-color: grey;
+  border-radius: 100%;
+}
 
+.Control_Knob_Labels{  
+  display: flex;
+  grid-column: 1 / span 2;
+  font-size: 0.5em;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: rgba(100,100,100,1);
+  font-weight: bold;
+}
 
+#Power_Label{
+  grid-row: 3 / span 1;
+}
+
+#Power_Knob{
+  grid-row: 4 / span 2;
+}
+
+#Gain_Label{
+  grid-row: 6 / span 1;
+}
+
+#Gain_Knob{
+  grid-row: 7 / span 2;
+}
 
 
 
