--- a/Pages/Code_Stylesheets/Activity_Rings_Widget.css
+++ b/Pages/Code_Stylesheets/Activity_Rings_Widget.css
@@ -48,21 +48,6 @@
   opacity: 0;
 }
 
-.Rotate_Blue_Movements {
-  transform: rotate(270deg);
-  opacity: 1;
-}
-
-.Rotate_Green_Movements{
-  transform: rotate(288deg);
-  opacity: 1;
-}
-
-.Rotate_Red_Movements{
-  transform: rotate(306deg);
-  opacity: 1;
-}
-
 #Black_Centre{
   --Diameter: 1.5rem;
   background-color: rgb(30,30,30);
@@ -79,7 +64,7 @@
   margin-bottom: 0.05rem;
   margin-left: 0.8rem;
   opacity: 0;
-  transform: translateX(4rem);
+  transform: translateX(-4rem);
   transition: 0.5s;
 }
 
@@ -97,14 +82,6 @@
   position: absolute;
   --Diameter: calc(1 * 1.5rem + 1.5rem);
   background: conic-gradient(#56BFDB 0%, rgb(30,30,30) 0);
-}
-
-.Fade_In_Start_Nub {
-  opacity: 1;
-}
-
-.Fade_In_End_Nub {
-  opacity: 1;
 }
 
 .Red_Ring_Animation{
@@ -298,42 +275,100 @@
 }
 
 .Show_Move_Label{
-  opacity: 1;
-  transform: translateX(0rem);
+  animation: 0.3s Show_Move_Label_Keyframes ease forwards;
+  animation-delay: 0.2s;
   transition-delay: 0.2s;
 }
 
 .Show_Exercise_Label{
-  opacity: 1;
-  transform: translateX(0rem);
+  animation: 0.3s Show_Move_Label_Keyframes ease forwards;
+  animation-delay: 0.4s;
   transition-delay: 0.4s;
 }
 
 .Show_Stand_Label{
-  opacity: 1;
-  transform: translateX(0rem);
+  animation: 0.3s Show_Stand_Label_Keyframes ease forwards;
+  animation-delay: 0.6s;
   transition-delay: 0.6s;
 }
 
+@keyframes Show_Move_Label_Keyframes {
+  from{opacity: 0; transform: translateX(-4rem);}
+  to{opacity: 1; transform: translateX(0rem);}
+}
+
+@keyframes Show_Exercise_Label_Keyframes {
+  from{opacity: 0; transform: translateX(-4rem);}
+  to{opacity: 1; transform: translateX(0rem);}
+}
+
+@keyframes Show_Stand_Label_Keyframes {
+  from{opacity: 0; transform: translateX(-4rem);}
+  to{opacity: 1; transform: translateX(0rem);}
+}
+
+
 .Show_Red_Nub{
-  opacity: 1;
+  animation: 0.5s Show_Red_Nub_Keyframes ease forwards;
   transition-delay: 0.3s;
+  animation-delay: 0.3s;
 }
 
 .Show_Green_Nub{
-  opacity: 1;
+  animation: 0.5s Show_Green_Nub_Keyframes ease forwards;
   transition-delay: 0.2s;
+  animation-delay: 0.2s;
 }
 
 .Show_Blue_Nub{
-  opacity: 1;
+  animation: 0.5s Show_Blue_Nub_Keyframes ease forwards;
   transition-delay: 0.1s;
+  animation-delay: 0.1s;
 }
 
+@keyframes Show_Red_Nub_Keyframes {
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
 
+@keyframes Show_Green_Nub_Keyframes {
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
 
+@keyframes Show_Blue_Nub_Keyframes {
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
 
+.Rotate_Red_Movements{
+  animation: 0.3s Rotate_Red_Movements_Keyframes linear forwards;
+  animation-delay: 0.9s;
+}
 
+.Rotate_Green_Movements{
+  animation: 0.3s Rotate_Green_Movements_Keyframes linear forwards;
+  animation-delay: 0.7s;
+}
 
+.Rotate_Blue_Movements {
+  animation: 0.3s Rotate_Blue_Movements_Keyframes linear forwards;
+  animation-delay: 0.5s;
+}
+
+@keyframes Rotate_Red_Movements_Keyframes{
+  from{transform: rotate(0deg); opacity: 0;}
+  to{transform: rotate(306deg); opacity: 1;}
+}
+
+@keyframes Rotate_Green_Movements_Keyframes{
+  from{transform: rotate(0deg); opacity: 0;}
+  to{transform: rotate(288deg); opacity: 1;}
+}
+
+@keyframes Rotate_Blue_Movements_Keyframes{
+  from{transform: rotate(0deg); opacity: 0;}
+  to{transform: rotate(270deg); opacity: 1;}
+}
 
 
