--- a/Pages/Code_Stylesheets/About_Card.css
+++ b/Pages/Code_Stylesheets/About_Card.css
@@ -15,20 +15,33 @@
   backdrop-filter: blur(3em);
   box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
   opacity: 0;
-  transform: scale(0);
-  transition: 0.2s;
+  /* transform: scale(0); */
+  transform: translateY(calc(50vh + var(--Height)));
+  transition: 0.5s ease;
   font-size: min(2vw,20px);
   display: grid;
   grid-template-columns: 2.2fr 1fr 1fr 0.25fr;
   grid-template-rows: 2fr 0.5fr repeat(10,1fr) 4fr;
   color: rgb(65,65,65);
+  will-change: opacity, transform;
 } 
 
 .Show_About_Card{
   opacity: 1;
-  transform: scale(1);
-  transition: 0.2s;
+  transform: translateY(0);
+  /* transform: scale(1); */
+  transition: 0.2s ease;
 }
+
+
+
+
+
+
+
+
+
+
 
 .About_Details{
     font-family: Arial, Helvetica, sans-serif;
