--- a/Pages/Code_Stylesheets/Widgets_Card.css
+++ b/Pages/Code_Stylesheets/Widgets_Card.css
@@ -34,11 +34,12 @@
 
 .Widgets_Glass_Background{
   width: 22em;
-  background-color: rgba(255,255,255,0.5);
-  -webkit-backdrop-filter: blur(300em);
-  backdrop-filter: blur(300em);
+  background-color: rgba(0,0,0,1);
+  -webkit-backdrop-filter: blur(1000rem);
+  backdrop-filter: blur(1000rem);
+  filter: blur(500rem);
   box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
-  -webkit-mask: -webkit-gradient(linear,right 5%,left 5%,from(rgba(255, 255, 255, 1)),to(rgba(255, 255, 255, 0)));
+  -webkit-mask: -webkit-gradient(linear,right 5%,left 5%,from(rgba(0,0,0, 1)),to(rgba(0,0,0,0)));
   opacity: 1;
   z-index: 19;
   transform: translateX(20em);
@@ -55,6 +56,7 @@
   background-color: rgba(255,255,255,1);
   border-radius: 1em;
   overflow: hidden;
+  box-shadow: 0 0.1rem 0.2rem 0.1rem rgba(0,0,0,0.3);
 }
 
 #Clock_Widget{
