--- a/Pages/Code_Stylesheets/Window.css
+++ b/Pages/Code_Stylesheets/Window.css
@@ -21,6 +21,8 @@ body {
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
   filter: brightness(1);
+  /* background: rgb(207,165,203); */
+  background: rgb(0,0,0);
 }
 
 body::-webkit-scrollbar { 
