--- a/Pages/Code_Stylesheets/Notes_Widget.css
+++ b/Pages/Code_Stylesheets/Notes_Widget.css
@@ -21,7 +21,7 @@
   padding: 0.3em 0.3em 0.3em 1em;
 }
 
-#Notes_Folder_Symbol{
+.Notes_Folder_Symbol{
   display: flex;
   float: left;
   height: 2em;
@@ -32,6 +32,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  transform: translateX(-5rem);
+  filter: opacity(0);
 }
 
 #Notes_Title{
@@ -44,6 +46,8 @@
   box-sizing: border-box;
   padding-left: 0.2em;
   font-family: Arial;
+  transform: translateX(-5rem);
+  filter: opacity(0);
 }
 
 #Notes_Title > label{
@@ -85,7 +89,20 @@
   color: rgb(65,65,65);
 }
 
+.Translate_Right_Animation_1{
+  animation: 0.3s Translate_Right_Keyframes ease forwards;
+  animation-delay: 0.2s;
+}
 
+.Translate_Right_Animation_2{
+  animation: 0.2s Translate_Right_Keyframes ease forwards;
+  animation-delay: 0.4s;
+}
+
+@keyframes Translate_Right_Keyframes {
+  from{transform: translateX(-5rem); filter: opacity(0);}
+  to{transform: translateX(0rem); filter: opacity(1);}
+}
 
 
 
